Finished database + connections for logging in

--- a/src/login/SetPassword.fxml
+++ b/src/login/SetPassword.fxml
@@ -2,6 +2,7 @@
 
 <?import com.jfoenix.controls.JFXButton?>
 <?import com.jfoenix.controls.JFXPasswordField?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
@@ -16,12 +17,17 @@
                         <Font name="Yu Gothic UI Light" size="48.0" />
                     </font>
                 </Text>
-                <JFXButton fx:id="passwordButton" layoutX="202.0" layoutY="233.0" onAction="#setPassword" prefHeight="51.0" prefWidth="142.0" ripplerFill="WHITE" style="-fx-background-color: #65ABEE;" text="Set Password" textFill="WHITE">
+                <JFXButton fx:id="setPasswordButton" layoutX="156.0" layoutY="215.0" onAction="#setPassword" prefHeight="51.0" prefWidth="234.0" ripplerFill="WHITE" style="-fx-background-color: #65ABEE;" text="Set Password" textFill="WHITE">
                     <font>
                         <Font name="Yu Gothic Bold" size="17.0" />
                     </font>
                 </JFXButton>
             <JFXPasswordField fx:id="password" labelFloat="true" layoutX="156.0" layoutY="129.0" prefHeight="45.0" prefWidth="234.0" promptText="New Password" />
+            <Label fx:id="invalidPassword" layoutX="156.0" layoutY="275.0" prefHeight="17.0" prefWidth="234.0" textFill="#ff8181">
+               <font>
+                  <Font name="Yu Gothic UI Regular" size="12.0" />
+               </font>
+            </Label>
             </children>
         </Pane>
     </children>
