--- a/src/login/login.fxml
+++ b/src/login/login.fxml
@@ -2,6 +2,7 @@
 
 <?import com.jfoenix.controls.JFXButton?>
 <?import com.jfoenix.controls.JFXTextField?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
@@ -16,21 +17,21 @@
                   <Font name="Yu Gothic UI Light" size="48.0" />
                </font>
             </Text>
-            <JFXButton fx:id="loginButton" layoutX="227.0" layoutY="268.0" onAction="#userLogin" prefHeight="51.0" prefWidth="92.0" ripplerFill="WHITE" style="-fx-background-color: #65ABEE;" text="Log In" textFill="WHITE">
+            <JFXButton fx:id="loginButton" layoutX="153.0" layoutY="251.0" onAction="#userLogin" prefHeight="51.0" prefWidth="240.0" ripplerFill="WHITE" style="-fx-background-color: #65ABEE;" text="Log In" textFill="WHITE">
                <font>
                   <Font name="Yu Gothic Bold" size="18.0" />
                </font>
             </JFXButton>
-            <JFXTextField fx:id="username" focusColor="#7081b5" labelFloat="true" layoutX="153.0" layoutY="123.0" prefHeight="43.0" prefWidth="240.0" promptText="Username">
-               <font>
-                  <Font name="Yu Gothic Regular" size="16.0" />
-               </font>
-            </JFXTextField>
             <JFXTextField fx:id="password" focusColor="#7081b5" labelFloat="true" layoutX="153.0" layoutY="191.0" prefHeight="43.0" prefWidth="240.0" promptText="Password">
                <font>
                   <Font name="Yu Gothic Regular" size="16.0" />
                </font>
             </JFXTextField>
+            <Label fx:id="wrongPassword" layoutX="153.0" layoutY="308.0" prefHeight="17.0" prefWidth="240.0" textFill="#ff7a7a">
+               <font>
+                  <Font name="Yu Gothic UI Regular" size="12.0" />
+               </font>
+            </Label>
          </children>
       </Pane>
    </children>
