--- a/src/login/SetPassword.fxml
+++ b/src/login/SetPassword.fxml
@@ -8,22 +8,22 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="login.SetPasswordController">
+<AnchorPane prefHeight="300.0" prefWidth="450.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="login.SetPasswordController">
     <children>
-        <Pane layoutX="27.0" layoutY="26.0" prefHeight="348.0" prefWidth="546.0" style="-fx-background-color: #ffff;">
+        <Pane layoutX="25.0" layoutY="25.0" prefHeight="250.0" prefWidth="400.0" style="-fx-background-color: #ffff;">
             <children>
-                <Text fx:id="createPassword" layoutX="60.0" layoutY="80.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Create Password" textAlignment="CENTER" wrappingWidth="426.0634765625">
+                <Text fx:id="createPassword" fill="#555555" layoutX="17.0" layoutY="66.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Create Password" textAlignment="CENTER" wrappingWidth="366.73016357421875">
                     <font>
                         <Font name="Yu Gothic UI Light" size="48.0" />
                     </font>
                 </Text>
-                <JFXButton fx:id="setPasswordButton" layoutX="156.0" layoutY="215.0" onAction="#setPassword" prefHeight="51.0" prefWidth="234.0" ripplerFill="WHITE" style="-fx-background-color: #65ABEE;" text="Set Password" textFill="WHITE">
+                <JFXButton fx:id="setPasswordButton" layoutX="80.0" layoutY="160.0" onAction="#setPassword" prefHeight="40.0" prefWidth="240.0" ripplerFill="WHITE" style="-fx-background-color: #65ABEE;" text="Set Password" textFill="WHITE">
                     <font>
                         <Font name="Yu Gothic Bold" size="17.0" />
                     </font>
                 </JFXButton>
-            <JFXPasswordField fx:id="password" labelFloat="true" layoutX="156.0" layoutY="129.0" prefHeight="45.0" prefWidth="234.0" promptText="New Password" />
-            <Label fx:id="invalidPassword" layoutX="156.0" layoutY="275.0" prefHeight="17.0" prefWidth="234.0" textFill="#ff8181">
+            <JFXPasswordField fx:id="password" labelFloat="true" layoutX="80.0" layoutY="100.0" prefHeight="40.0" prefWidth="240.0" promptText="New Password" />
+            <Label fx:id="invalidPassword" layoutX="80.0" layoutY="200.0" prefHeight="20.0" prefWidth="240.0" textFill="#ff6666">
                <font>
                   <Font name="Yu Gothic UI Regular" size="12.0" />
                </font>
