--- a/src/Dashboard/Dashboard.fxml
+++ b/src/Dashboard/Dashboard.fxml
@@ -14,22 +14,22 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="1032.0" prefWidth="1930.0" style="-fx-background-color: #E4E4E4;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Dashboard.DashboardController">
+<AnchorPane prefHeight="771.0" prefWidth="1369.0" style="-fx-background-color: #E4E4E4;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Dashboard.DashboardController">
     <children>
-        <VBox layoutX="-4.0" layoutY="-4.0" prefHeight="1038.0" prefWidth="382.0" style="-fx-background-color: #4C6AB7;">
+        <VBox layoutX="-4.0" layoutY="-4.0" prefHeight="775.0" prefWidth="308.0" style="-fx-background-color: #4C6AB7;">
             <children>
                 <Pane prefHeight="220.0" prefWidth="410.0">
                     <children>
-                        <ImageView fitHeight="146.0" fitWidth="334.0" layoutX="18.0" layoutY="57.0">
+                        <ImageView fitHeight="115.0" fitWidth="287.0" layoutX="10.0" layoutY="65.0">
                             <image>
                                 <Image url="@../../MMlogo.png" />
                             </image>
                         </ImageView>
                     </children></Pane>
                 <Pane prefHeight="76.0" prefWidth="382.0" />
-                <JFXButton alignment="BASELINE_LEFT" onAction="#openClassroom" prefHeight="146.0" prefWidth="410.0" text="  Classroom" textFill="WHITE">
+                <JFXButton alignment="BASELINE_LEFT" onAction="#openClassroom" prefHeight="146.0" prefWidth="348.0" text="  Classroom" textFill="WHITE">
                     <font>
-                        <Font size="32.0" />
+                        <Font size="20.0" />
                     </font>
                     <VBox.margin>
                         <Insets />
@@ -38,93 +38,88 @@
                         <Insets left="50.0" />
                     </padding>
                     <graphic>
-                        <FontAwesomeIconView fill="WHITE" glyphName="FOLDER" size="35" />
+                        <FontAwesomeIconView fill="WHITE" glyphName="FOLDER" size="30" />
                     </graphic>
                 </JFXButton>
                 <JFXButton alignment="BASELINE_LEFT" onAction="#openPeople" prefHeight="146.0" prefWidth="415.0" text="  People" textFill="WHITE">
                     <font>
-                        <Font size="32.0" />
+                        <Font size="20.0" />
                     </font>
                     <padding>
                         <Insets left="50.0" />
                     </padding>
                     <graphic>
-                        <FontAwesomeIconView fill="WHITE" glyphName="USERS" size="35" />
+                        <FontAwesomeIconView fill="WHITE" glyphName="USERS" size="30" />
                     </graphic>
                 </JFXButton>
                 <JFXButton alignment="BASELINE_LEFT" onAction="#openSetting" prefHeight="146.0" prefWidth="410.0" text="  Settings" textFill="WHITE">
                     <font>
-                        <Font size="32.0" />
+                        <Font size="20.0" />
                     </font>
                     <padding>
                         <Insets left="50.0" />
                     </padding>
                     <graphic>
-                        <FontAwesomeIconView fill="WHITE" glyphName="GEAR" size="35" />
+                        <FontAwesomeIconView fill="WHITE" glyphName="GEAR" size="30" />
                     </graphic>
                 </JFXButton>
-                <Pane prefHeight="221.0" prefWidth="452.0">
+                <Pane prefHeight="197.0" prefWidth="349.0">
                     <children>
-                        <JFXButton layoutX="186.0" layoutY="144.0" prefHeight="73.0" prefWidth="196.0" text=" Log Out" textFill="WHITE">
+                        <JFXButton layoutX="109.0" layoutY="79.0" prefHeight="63.0" prefWidth="198.0" text=" Log Out" textFill="WHITE">
                             <font>
-                                <Font size="28.0" />
+                                <Font size="20.0" />
                             </font>
                             <graphic>
-                                <FontAwesomeIconView fill="WHITE" glyphName="POWER_OFF" size="35" text="" />
+                                <FontAwesomeIconView fill="WHITE" glyphName="POWER_OFF" size="30" text="" />
                             </graphic>
                         </JFXButton>
                     </children>
                 </Pane>
             </children>
         </VBox>
-        <Pane layoutX="378.0" layoutY="-2.0" style="-fx-background-color: #FFFFFF;">
+        <Pane layoutX="304.0" prefHeight="93.0" prefWidth="1065.0" style="-fx-background-color: #FFFFFF;">
             <children>
-                <Text fill="#726d6d" layoutX="25.0" layoutY="90.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Classroom" wrappingWidth="506.30029296875">
+                <Text fill="#726d6d" layoutX="21.0" layoutY="68.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Classroom" wrappingWidth="506.30029296875">
                     <font>
-                        <Font name="Yu Gothic UI Regular" size="50.0" />
+                        <Font name="Yu Gothic UI Regular" size="39.0" />
                     </font>
                 </Text>
             </children>
         </Pane>
-        <TableView fx:id="classroomtable" layoutX="439.0" layoutY="196.0" prefHeight="776.0" prefWidth="1051.0">
+        <TableView fx:id="classroomtable" layoutX="304.0" layoutY="93.0" prefHeight="678.0" prefWidth="757.0">
             <columns>
                 <TableColumn fx:id="idcolumn" prefWidth="211.33331298828125" text="Classroom Id" />
-                <TableColumn fx:id="namecolumn" minWidth="0.0" prefWidth="513.0" text="Classroom name" />
+                <TableColumn fx:id="namecolumn" minWidth="0.0" prefWidth="544.0" text="Classroom name" />
             </columns>
         </TableView>
-        <JFXButton layoutX="1572.0" layoutY="439.0" onAction="#addClassroom" prefHeight="67.0" prefWidth="238.0" style="-fx-background-color: #4C6AB7;" text="Add Classroom" textFill="WHITE">
-            <font>
-                <Font size="25.0" />
-            </font>
-        </JFXButton>
-      <Pane layoutX="1489.0" layoutY="196.0" prefHeight="468.0" prefWidth="445.0" style="-fx-background-color: #ffffff; -fx-border-color: #e4e4e4;">
+      <Pane layoutX="1061.0" layoutY="122.0" prefHeight="421.0" prefWidth="308.0" style="-fx-background-color: #ffffff; -fx-border-color: #e4e4e4;">
          <children>
-            <JFXButton layoutX="104.0" layoutY="365.0" onAction="#loadClassroom" prefHeight="67.0" prefWidth="238.0" style="-fx-background-color: #4C6AB7;" text="Load Classroom" textFill="WHITE">
+            <JFXButton layoutX="58.0" layoutY="321.0" onAction="#loadClassroom" prefHeight="37.0" prefWidth="182.0" style="-fx-background-color: #4C6AB7;" text="Load Classroom" textFill="WHITE">
                <font>
-                  <Font size="25.0" />
+                  <Font size="20.0" />
                </font>
             </JFXButton>
-            <JFXButton layoutX="104.0" layoutY="268.0" onAction="#addClassroom" prefHeight="67.0" prefWidth="238.0" style="-fx-background-color: #4C6AB7;" text="Add Classroom" textFill="WHITE">
+            <JFXButton layoutX="58.0" layoutY="266.0" onAction="#addClassroom" prefHeight="41.0" prefWidth="182.0" style="-fx-background-color: #4C6AB7;" text="Add Classroom" textFill="WHITE">
                <font>
-                  <Font size="25.0" />
+                  <Font size="20.0" />
                </font>
             </JFXButton>
-            <JFXTextField fx:id="classroomname" layoutX="85.0" layoutY="184.0" prefHeight="50.0" prefWidth="230.0" promptText="Enter name" style="-fx-background-color: #ffffff;">
+            <JFXTextField fx:id="classroomname" layoutX="34.0" layoutY="179.0" prefHeight="50.0" prefWidth="230.0" promptText="Enter name" style="-fx-background-color: #ffffff;">
                <font>
                   <Font size="19.0" />
                </font>
             </JFXTextField>
-            <Text fill="#404040" layoutX="84.0" layoutY="159.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Classroom name:" wrappingWidth="178.50001215934753">
+            <Text fill="#404040" layoutX="35.0" layoutY="157.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Classroom name:" wrappingWidth="178.50001215934753">
                <font>
                   <Font name="Yu Gothic UI Regular" size="21.0" />
                </font>
             </Text>
-            <JFXTextField fx:id="classroomid" layoutX="86.0" layoutY="63.0" prefHeight="50.0" prefWidth="227.0" promptText="Enter id" style="-fx-background-color: #ffffff;">
+            <JFXTextField fx:id="classroomid" layoutX="35.0" layoutY="54.0" prefHeight="50.0" prefWidth="227.0" promptText="Enter id" style="-fx-background-color: #ffffff;">
                <font>
                   <Font size="19.0" />
                </font>
             </JFXTextField>
-            <Text fill="#404040" layoutX="84.0" layoutY="49.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Classroom id:" wrappingWidth="156.9669189453125">
+            <Text fill="#404040" layoutX="35.0" layoutY="48.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Classroom id:" wrappingWidth="156.9669189453125">
                <font>
                   <Font name="Yu Gothic UI Regular" size="21.0" />
                </font>
