--- a/src/AssignmentBundle/AssignmentBundlePage.fxml
+++ b/src/AssignmentBundle/AssignmentBundlePage.fxml
@@ -15,7 +15,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="771.0" prefWidth="1369.0" style="-fx-background-color: #E4E4E4;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Dashboard.DashboardController">
+<AnchorPane prefHeight="771.0" prefWidth="1369.0" style="-fx-background-color: #E4E4E4;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="AssignmentBundle.AssignmentBundlePageController">
     <children>
         <VBox layoutX="-4.0" layoutY="-4.0" prefHeight="775.0" prefWidth="308.0" style="-fx-background-color: #4C6AB7;">
             <children>
@@ -80,59 +80,59 @@
         </VBox>
         <Pane layoutX="304.0" prefHeight="93.0" prefWidth="1065.0" style="-fx-background-color: #FFFFFF;">
             <children>
-                <Text fill="#726d6d" layoutX="21.0" layoutY="68.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Classroom" wrappingWidth="506.30029296875">
+                <Text fill="#726d6d" layoutX="14.0" layoutY="65.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Assignment Bundle" wrappingWidth="506.30029296875">
                     <font>
                         <Font name="Yu Gothic UI Regular" size="39.0" />
                     </font>
                 </Text>
             </children>
         </Pane>
-        <TableView fx:id="classroomtable" layoutX="304.0" layoutY="120.0" onMouseClicked="#handleRowSelect" prefHeight="651.0" prefWidth="757.0">
+        <TableView fx:id="bundletable" layoutX="304.0" layoutY="120.0" onMouseClicked="#handleRowSelect" prefHeight="651.0" prefWidth="757.0">
             <columns>
-                <TableColumn fx:id="idcolumn" prefWidth="211.33331298828125" text="Classroom Id" />
-                <TableColumn fx:id="namecolumn" minWidth="0.0" prefWidth="544.0" text="Classroom name" />
+                <TableColumn fx:id="idcolumn" prefWidth="211.33331298828125" text="Bundle Id" />
+                <TableColumn fx:id="namecolumn" minWidth="0.0" prefWidth="544.0" text="Bundle name" />
             </columns>
         </TableView>
-      <Pane layoutX="1061.0" layoutY="93.0" prefHeight="678.0" prefWidth="308.0" style="-fx-background-color: #ffffff; -fx-border-color: #e4e4e4;">
-         <children>
-            <JFXButton layoutX="58.0" layoutY="321.0" onAction="#loadClassroom" prefHeight="37.0" prefWidth="182.0" style="-fx-background-color: #4C6AB7;" text="Load Classroom" textFill="WHITE">
-               <font>
-                  <Font size="20.0" />
-               </font>
-            </JFXButton>
-            <JFXButton layoutX="58.0" layoutY="266.0" onAction="#addClassroom" prefHeight="41.0" prefWidth="182.0" style="-fx-background-color: #4C6AB7;" text="Add Classroom" textFill="WHITE">
-               <font>
-                  <Font size="20.0" />
-               </font>
-            </JFXButton>
-            <JFXTextField fx:id="classroomname" layoutX="34.0" layoutY="179.0" prefHeight="50.0" prefWidth="230.0" promptText="Enter name" style="-fx-background-color: #ffffff;">
-               <font>
-                  <Font size="19.0" />
-               </font>
-            </JFXTextField>
-            <Text fill="#404040" layoutX="35.0" layoutY="157.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Classroom name:" wrappingWidth="178.50001215934753">
-               <font>
-                  <Font name="Yu Gothic UI Regular" size="21.0" />
-               </font>
-            </Text>
-            <JFXTextField fx:id="classroomid" layoutX="35.0" layoutY="54.0" prefHeight="50.0" prefWidth="227.0" promptText="Enter id" style="-fx-background-color: #ffffff;">
-               <font>
-                  <Font size="19.0" />
-               </font>
-            </JFXTextField>
-            <Text fill="#404040" layoutX="35.0" layoutY="48.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Classroom id:" wrappingWidth="156.9669189453125">
-               <font>
-                  <Font name="Yu Gothic UI Regular" size="21.0" />
-               </font>
-            </Text>
-            <Label fx:id="preExistingID" layoutX="119.0" layoutY="342.0" prefHeight="17.0" prefWidth="203.0" textFill="RED">
-               <font>
-                  <Font name="Yu Gothic UI Regular" size="12.0" />
-               </font>
-            </Label>
-         </children>
-      </Pane>
-      <Text layoutX="397.0" layoutY="123.0" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="1.0" />
-      <Text layoutX="318.0" layoutY="114.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Double click to view classroom details." wrappingWidth="689.30029296875" />
+        <Pane layoutX="1061.0" layoutY="93.0" prefHeight="678.0" prefWidth="308.0" style="-fx-background-color: #ffffff; -fx-border-color: #e4e4e4;">
+            <children>
+                <JFXButton layoutX="58.0" layoutY="321.0" onAction="#loadClassroom" prefHeight="37.0" prefWidth="182.0" style="-fx-background-color: #4C6AB7;" text="Load Bundle" textFill="WHITE">
+                    <font>
+                        <Font size="20.0" />
+                    </font>
+                </JFXButton>
+                <JFXButton layoutX="58.0" layoutY="266.0" onAction="#addClassroom" prefHeight="41.0" prefWidth="182.0" style="-fx-background-color: #4C6AB7;" text="Add Bundle" textFill="WHITE">
+                    <font>
+                        <Font size="20.0" />
+                    </font>
+                </JFXButton>
+                <JFXTextField fx:id="classroomname" layoutX="34.0" layoutY="179.0" prefHeight="50.0" prefWidth="230.0" promptText="Enter name" style="-fx-background-color: #ffffff;">
+                    <font>
+                        <Font size="19.0" />
+                    </font>
+                </JFXTextField>
+                <Text fill="#404040" layoutX="35.0" layoutY="157.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Bundle name:" wrappingWidth="178.50001215934753">
+                    <font>
+                        <Font name="Yu Gothic UI Regular" size="21.0" />
+                    </font>
+                </Text>
+                <JFXTextField fx:id="classroomid" layoutX="35.0" layoutY="54.0" prefHeight="50.0" prefWidth="227.0" promptText="Enter id" style="-fx-background-color: #ffffff;">
+                    <font>
+                        <Font size="19.0" />
+                    </font>
+                </JFXTextField>
+                <Text fill="#404040" layoutX="35.0" layoutY="48.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Bundle id:" wrappingWidth="156.9669189453125">
+                    <font>
+                        <Font name="Yu Gothic UI Regular" size="21.0" />
+                    </font>
+                </Text>
+                <Label fx:id="preExistingID" layoutX="119.0" layoutY="342.0" prefHeight="17.0" prefWidth="203.0" textFill="RED">
+                    <font>
+                        <Font name="Yu Gothic UI Regular" size="12.0" />
+                    </font>
+                </Label>
+            </children>
+        </Pane>
+        <Text layoutX="397.0" layoutY="123.0" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="1.0" />
+        <Text layoutX="318.0" layoutY="114.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Double click to view assignment details." wrappingWidth="689.30029296875" />
     </children>
 </AnchorPane>
