--- a/src/Assignments/AssignmentPage.fxml
+++ b/src/Assignments/AssignmentPage.fxml
@@ -90,7 +90,7 @@
             </JFXButton>
             </children>
         </Pane>
-        <TableView fx:id="AssignmentTable" layoutX="304.0" layoutY="130.0" prefHeight="641.0" prefWidth="1065.0">
+        <TableView fx:id="AssignmentTable" layoutX="304.0" layoutY="130.0" onMouseClicked="#editMark" prefHeight="641.0" prefWidth="1065.0">
             <columns>
                 <TableColumn fx:id="idColumn" prefWidth="198.0" text="Student ID" />
                 <TableColumn fx:id="nameColumn" minWidth="0.0" prefWidth="266.0" text="Student Name" />
