--- a/src/login/login.fxml
+++ b/src/login/login.fxml
@@ -8,26 +8,26 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="354.0" prefWidth="491.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="login.LoginController">
+<AnchorPane prefHeight="482.0" prefWidth="483.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="login.LoginController">
    <children>
-      <Pane layoutX="25.0" layoutY="25.0" prefHeight="306.0" prefWidth="443.0" style="-fx-background-color: #ffff;">
+      <Pane id="Pane" layoutX="-9.0" layoutY="-1.0" prefHeight="484.0" prefWidth="492.0" styleClass="Pane" stylesheets="@../art/login.css">
          <children>
-            <Text fx:id="signin" fill="#555555" layoutX="139.0" layoutY="84.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Sign in" textAlignment="CENTER" wrappingWidth="165.39682006835938">
+            <Text fx:id="signin" fill="WHITE" layoutX="163.0" layoutY="202.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Sign in" textAlignment="CENTER" wrappingWidth="165.39682006835938">
                <font>
                   <Font name="Yu Gothic UI Light" size="48.0" />
                </font>
             </Text>
-            <JFXButton fx:id="loginButton" layoutX="102.0" layoutY="229.0" onAction="#userLogin" prefHeight="40.0" prefWidth="240.0" ripplerFill="WHITE" style="-fx-background-color: #65ABEE;" text="Log In" textFill="WHITE">
+            <JFXButton fx:id="loginButton" layoutX="126.0" layoutY="367.0" onAction="#userLogin" prefHeight="40.0" prefWidth="240.0" ripplerFill="WHITE" text="Log In" textFill="WHITE">
                <font>
                   <Font name="Yu Gothic Bold" size="18.0" />
                </font>
             </JFXButton>
-            <JFXTextField fx:id="password" focusColor="#7081b5" labelFloat="true" layoutX="102.0" layoutY="129.0" prefHeight="64.0" prefWidth="240.0" promptText="Password">
+            <JFXTextField fx:id="password" focusColor="WHITE" labelFloat="true" layoutX="126.0" layoutY="280.0" prefHeight="40.0" prefWidth="240.0" promptText="Password" styleClass="text-area" stylesheets="@../art/login.css" unFocusColor="WHITE">
                <font>
                   <Font name="Yu Gothic Regular" size="16.0" />
                </font>
             </JFXTextField>
-            <Label fx:id="wrongPassword" layoutX="80.0" layoutY="200.0" prefHeight="20.0" prefWidth="240.0" textFill="#ff6666">
+            <Label fx:id="wrongPassword" layoutX="126.0" layoutY="335.0" prefHeight="20.0" prefWidth="240.0" textFill="#ff6666">
                <font>
                   <Font name="Yu Gothic UI Regular" size="12.0" />
                </font>
