--- a/src/Assignments/AssignmentPage.fxml
+++ b/src/Assignments/AssignmentPage.fxml
@@ -83,19 +83,27 @@
                         <Font name="Yu Gothic UI Regular" size="39.0" />
                     </font>
                 </Text>
-            <JFXButton fx:id="backButton" defaultButton="true" layoutX="943.0" layoutY="56.0" onAction="#backToBundle" prefHeight="38.0" prefWidth="81.0" style="-fx-background-color: #4C6AB7;" text="Back" textFill="WHITE" wrapText="true">
+            <JFXButton fx:id="backButton" defaultButton="true" layoutX="867.0" layoutY="31.0" onAction="#backToBundle" prefHeight="38.0" prefWidth="81.0" style="-fx-background-color: #4C6AB7;" text="Back" textFill="WHITE" wrapText="true">
                <font>
                   <Font name="System Bold" size="17.0" />
                </font>
             </JFXButton>
+            <JFXButton fx:id="openHelp" layoutX="948.0" layoutY="25.0" prefHeight="50.0" prefWidth="94.0" text="Help">
+               <graphic>
+                  <FontAwesomeIconView fill="#4c6ab7" glyphName="QUESTION_CIRCLE" size="25" />
+               </graphic>
+               <font>
+                  <Font name="Yu Gothic UI Regular" size="15.0" />
+               </font>
+            </JFXButton>
             </children>
         </Pane>
-        <TableView fx:id="AssignmentTable" layoutX="304.0" layoutY="130.0" onMouseClicked="#editMark" prefHeight="641.0" prefWidth="1065.0">
+        <TableView fx:id="AssignmentTable" layoutX="304.0" layoutY="130.0" onMouseClicked="#editMark" prefHeight="650.0" prefWidth="1060.0">
             <columns>
-                <TableColumn fx:id="idColumn" prefWidth="198.0" text="Student ID" />
-                <TableColumn fx:id="nameColumn" minWidth="0.0" prefWidth="266.0" text="Student Name" />
-            <TableColumn fx:id="gradeColumn" prefWidth="187.0" text="Grade" />
-            <TableColumn fx:id="markColumn" prefWidth="413.0" text="Mark breakdown" />
+                <TableColumn fx:id="idColumn" prefWidth="150.0" text="Student ID" />
+                <TableColumn fx:id="nameColumn" prefWidth="230.0" text="Student Name" />
+            <TableColumn fx:id="gradeColumn" prefWidth="180.0" text="Grade" />
+            <TableColumn fx:id="markColumn" prefWidth="500.0" text="Mark breakdown" />
             </columns>
         </TableView>
       <Text fx:id="AssignmentOutline" layoutX="456.0" layoutY="121.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" wrappingWidth="479.21630859375">
